# bench6

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  flake.nix  shell.nix
src/: CMakeLists.txt  bench6.h  common.c  main.c  readywave.c  register_deps.c  sched_add.c  sched_get.c
src/bench6/: CMakeLists.txt  bench6.c  bench6.h  common.c  common.h  readywave.c
src/cholesky/: CMakeLists.txt  Makefile.nanos6  Makefile.nodes  cholesky.c  la-headers.h
src/fibonacci/: CMakeLists.txt  README.md  fibonacci.c
src/heat/: CMakeLists.txt  Makefile  README.md  heat.h  kernel.c  main_mpi.c  main_smp.c  results  solver_itampi_ompss2_tasks.c  solver_mpi.c  solver_mpi_nbuffer.c  solver_mpi_ompss2_forkjoin.c  solver_mpi_ompss2_taskloop.c  solver_mpi_ompss2_tasks.c  solver_mpi_openmp.c  solver_mpirma_nbuffer.c  solver_mpirma_ompss2_tasks.c  solver_ompss2.c  solver_ompss2_residual.c  solver_ompss2_taskloop.c  solver_openmp.c  solver_seq.c  solver_tampi_ompss2_tasks.c  solver_tampi_openmp.c  solver_tampirma_ompss2_tasks.c  utils_mpi.c  utils_mpi.h
src/heat/common/: heat.h  kernel.c  main.c  misc.c
src/heat/gaspi/: macros.h  main.c  solver_gaspi.c  solver_gaspi_nbuffer.c  solver_gaspi_ompss2_forkjoin.c  solver_gaspi_ompss2_tasks.c  solver_tagaspi_ompss2_tasks.c  utils.c  utils.h
src/heat/mpi/: CMakeLists.txt  main.c  solver_itampi_ompss2_tasks.c  solver_mpi.c  solver_mpi_nbuffer.c  solver_mpi_ompss2_forkjoin.c  solver_mpi_ompss2_tasks.c  solver_mpirma_nbuffer.c  solver_mpirma_ompss2_tasks.c  solver_tampi_ompss2_tasks.c  solver_tampirma_ompss2_tasks.c  utils.c  utils.h
src/heat/smp/: CMakeLists.txt  main.c  solver_ompss2.c  solver_ompss2_residual.c  solver_ompss2_taskloop.c  solver_seq.c
src/hpccg/: CMakeLists.txt
src/hpccg/omp+task/: CMakeLists.txt  Makefile
src/hpccg/omp+task/include/: HPCCG.hpp  HPC_Sparse_Matrix.hpp  HPC_sparsemv.hpp  YAML_Doc.hpp  YAML_Element.hpp  compute_residual.hpp  constants.h  ddot.hpp  mytimer.hpp  (+4 more)
src/hpcg/: CMakeLists.txt
src/hpcg/tampi+isend+omp+task/: CMakeLists.txt  old.Makefile
src/lulesh/: CMakeLists.txt  lulesh-comm.cc  lulesh-comm_simple.cc  lulesh-init.cc  lulesh-util.cc  lulesh-viz.cc  lulesh.cc  lulesh.h  lulesh_t.cc  old.Makefile.nanos6  old.Makefile.nodes
src/matmul/: CMakeLists.txt  old.Makefile
src/miniamr/: .gitignore  CMakeLists.txt  README.md
src/miniamr/gaspi+oss+tagaspi/: CMakeLists.txt  block.c  block.h  check_sum.c  comm.c  comm.h  comm_block.c  comm_parent.c  comm_refine.c  comm_util.c  def.c  driver.c  init.c  kernel.c  main.c  move.c  old.Makefile.clang  pack.c  param.h  plot.c  profile.c  proto.h  rcb.c  refine.c  run_spheres_configuration.sh  stencil.c  timer.h  util.c
src/miniamr/mpi/: README  block.c  check_sum.c  comm.c  comm.h  comm_util.c  def.c  driver.c  init.c  kernel.c  main.c  move.c  old.Makefile.clang  pack.c  profile.c  proto.h  rcb.c  refine.c  stencil.c  timer.h
src/miniamr/mpi+omp/: CMakeLists.txt  README  block.c  block.h  check_sum.c  comm.c  comm_block.c  comm_parent.c  comm_refine.c  comm_util.c  def.c  driver.c  main.c  move.c  pack.c  param.h  plot.c  profile.c  proto.h  rcb.c  refine.c  stencil.c
src/miniamr/mpi+omp+tampi/: README  block.c  block.h  check_sum.c  comm.c  comm.h  comm_block.c  comm_parent.c  comm_refine.c  comm_util.c  def.c  driver.c  init.c  main.c  move.c  old.Makefile.clang  pack.c  pack.taskified.c  param.h  plot.c  profile.c  proto.h  rcb.c  rcb.taskified.c  refine.c  stencil.c  timer.h  util.c
src/miniamr/mpi+oss+tampi/: CMakeLists.txt  README  block.c  block.h  check_sum.c  comm.c  comm.h  comm_block.c  comm_parent.c  comm_refine.c  comm_util.c  def.c  driver.c  init.c  kernel.c  main.c  move.c  old.Makefile.clang  pack.c  param.h  plot.c  profile.c  proto.h  rcb.c  refine.c  stencil.c  timer.h  util.c
src/minimd/: .gitignore  CMakeLists.txt
src/minimd/charm/: Makefile  atom.cpp  atom.h  block.cpp  block.h  comm.cpp  comm.h  force.h  force_eam.cpp  force_eam.h  force_lj.cpp  force_lj.h  input.cpp  integrate.cpp  integrate.h  ljs.ci  ljs.cpp  ljs.h  ljs_kokkos.h  neighbor.cpp  neighbor.h  setup.cpp  thermo.cpp  thermo.h  types.h
src/minimd/inputs/: in.lj.miniMD
src/minimd/kokkos/: Makefile  atom.cpp  atom.h  comm.cpp  comm.h
src/minimd/ompss2/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  atom.c  box.c  box.h  box.hpp  comm.c  comm.h  comm_pack.c  comm_recv.c  comm_send.c  comm_unpack.c  comm_wait.c  config.h  dom.h  force.c  gaspi_check.h  hist.h  input.c  integrate.c  ljs.c  log.h  nanos6.toml  neigh.c  neigh.h  openmp.h  output.c  packbuf.c  packbuf.h  packbuf_gaspi.c  packbuf_mpi.c  ref.c  ref.h  safe.c  thermo.c  thermo.h  timer.c  (+2 more)
src/minimd/ref/: .gitignore  Makefile  Makefile.openmpi  neighbor.cpp  setup.cpp  thermo.cpp
src/minimd/ref-ompss2/: .clang-format  .gitignore  Makefile  atom.cpp  atom.hpp  comm.cpp  comm.hpp  force.hpp  force_eam.cpp  force_eam.hpp  force_lj.cpp  force_lj.hpp  in.lj.miniMD  input.cpp  integrate.cpp  integrate.hpp  main.cpp  main.hpp  neighbor.cpp  neighbor.hpp  output.cpp  setup.cpp  small.input  thermo.cpp  thermo.hpp  threadData.hpp  timer.cpp  timer.hpp  types.hpp  variant.hpp
src/multisaxpy/: CMakeLists.txt  multisaxpy-mpi.cpp  multisaxpy-smp.cpp
src/nbody/: CMakeLists.txt  README.md
src/nbody/scripts/: granularity-tests.sh  run-tests.sh
src/nqueens/: CMakeLists.txt  nqueens.cpp
src/ompss2/: CMakeLists.txt  README.md  readywave.c  register_deps.c  sched_add.c  sched_get.c
src/strassen/: CMakeLists.txt  strassen.c  strassen.h
src/stream/: CMakeLists.txt  kernel_ompss2.c  kernel_openmp.c  main.c  main_mpi.c  main_smp.c  stream.h
src/streaming/: .gitignore  CMakeLists.txt  Makefile.clang  README.md
src/taskbench/: CMakeLists.txt
src/taskbench/core/: CMakeLists.txt  core.cc  core_c.cc  core_kernel.cc  core_random.c  siphash.c  siphash.h
src/taskbench/ompss/: main.cc
src/taskbench/openmp/: main.cc
src/tools/: CMakeLists.txt  config.in.h  runner.c
src/tsunampi/: CMakeLists.txt  README.md  api.h  common.h  log.h  main.c  old.Makefile  tagaspi.c  tampi.c
(+166 files in other folders)
