add_subdirectory(bench6)
add_subdirectory(cholesky)
add_subdirectory(fibonacci)
add_subdirectory(heat)
add_subdirectory(hpcg)
add_subdirectory(hpccg)
add_subdirectory(lulesh)
add_subdirectory(matmul)
add_subdirectory(miniamr)
add_subdirectory(minimd)
add_subdirectory(multisaxpy)
add_subdirectory(nbody)
add_subdirectory(nqueens)
add_subdirectory(ompss2)
add_subdirectory(strassen)
add_subdirectory(stream)
add_subdirectory(streaming)
add_subdirectory(taskbench)
add_subdirectory(tsunampi)
