macro(mk_nanos6 NAME SOURCE)
  mk_bench(${NAME})
  target_sources(${NAME} PRIVATE ${SOURCE})
  target_link_libraries(${NAME} PRIVATE Nanos6::wrapper)
endmacro()

if(NANOS6_FOUND)
  mk_bench6(b6_nanos6_register_deps register_deps.c)
  mk_bench6(b6_nanos6_sched_add sched_add.c)
  mk_bench6(b6_nanos6_sched_get sched_get.c)
  mk_bench6(b6_nanos6_readywave readywave.c)
endif()
