macro(mk_nanos6 NAME SOURCE)
  mk_bench(${NAME})
  target_sources(${NAME} PRIVATE ${SOURCE})
  target_link_libraries(${NAME} PRIVATE bench6_lib Nanos6::nanos6)
endmacro()

macro(mk_nodes NAME SOURCE)
  mk_bench(${NAME})
  target_sources(${NAME} PRIVATE ${SOURCE})
  target_link_libraries(${NAME} PRIVATE bench6_lib Nodes::nodes)
endmacro()

if(NANOS6_FOUND)
  mk_nanos6(b6_nanos6_register_deps register_deps.c)
  mk_nanos6(b6_nanos6_sched_add sched_add.c)
  mk_nanos6(b6_nanos6_sched_get sched_get.c)
  mk_nanos6(b6_nanos6_readywave readywave.c)
endif()

if(NODES_FOUND)
  mk_nodes(b6_nodes_register_deps register_deps.c)
  mk_nodes(b6_nodes_sched_add sched_add.c)
  mk_nodes(b6_nodes_sched_get sched_get.c)
  mk_nodes(b6_nodes_readywave readywave.c)
endif()