
if(NANOS6_FOUND)
  mk_bench(b6_stream_nanos6)
  target_sources(b6_stream_nanos6 PRIVATE kernel_ompss2.c main_smp.c)
  target_link_libraries(b6_stream_nanos6 PRIVATE Nanos6::nanos6)
endif()

if(NODES_FOUND)
  mk_bench(b6_stream_nodes)
  target_sources(b6_stream_nodes PRIVATE kernel_ompss2.c main_smp.c)
  target_link_libraries(b6_stream_nodes PRIVATE Nodes::nodes)

  if(MPI_FOUND)
    mk_bench(b6_stream_mpi_nodes)
    target_sources(b6_stream_mpi_nodes PRIVATE kernel_ompss2.c main_mpi.c)
    target_link_libraries(b6_stream_mpi_nodes PRIVATE MPI::MPI_C Nodes::nodes)
  endif(MPI_FOUND)
endif()

if(OPENMP_FOUND)
  mk_bench(b6_stream_omp)
  target_sources(b6_stream_omp PRIVATE kernel_openmp.c main_smp.c)
  target_link_libraries(b6_stream_omp PRIVATE OpenMP::OpenMP_C)
endif()

if(OPENMPV_FOUND)
  mk_bench(b6_stream_ompv)
  target_sources(b6_stream_ompv PRIVATE kernel_openmp.c main_smp.c)
  target_link_libraries(b6_stream_ompv PRIVATE OpenMPV)
endif()
